# rufet

./: Cargo.toml  LICENSE  README.md  \
src/: main.rs  modules.rs
src/modules/: borders.rs  color.rs  data.rs  hostname.rs  kernel.rs  logo.rs  memory.rs  os.rs  output.rs  uptime.rs  utils.rs
