[package]
name = "rufet"
version = "0.1.1"
authors = ["Sveb <sveb@mailfence.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A command-line system information fetcher"
readme = "README.md"
homepage = "https://github.com/GreenTeaSeb/rufet"
repository = "https://github.com/GreenTeaSeb/rufet"
keywords = ["cli", "fetch"]
categories = ["command-line-utilities"]

[dependencies]
toml = "0.5.3"
serde = {version="1.0.130", features = ["derive"]}
sys-info = "0.9"
dirs = "4.0.0"
